Archive2/08/b53fb880f14c44/output
main.cpp:8:5: error: call to 'foo' is ambiguous
    foo(v);
    ^~~
main.cpp:3:6: note: candidate function
void foo(std::vector<int>);
     ^
main.cpp:4:6: note: candidate function
void foo(std::vector<int> &);
     ^
1 error generated.
