Archive2/08/b53fb880f14c44/main.cpp
#include <vector>

void foo(std::vector<int>);
void foo(std::vector<int> &);

int main() {
    std::vector<int> v;
    foo(v);
}